--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.4.5",
     "eventemitter2": "^6.4.9",
+    "evolution-api": "file:",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "fluent-ffmpeg": "^2.1.2",
