--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   api:
     container_name: evolution_api
@@ -19,37 +20,43 @@ services:
 
   redis:
     image: redis:latest
-    networks:
-      - evolution-net
     container_name: redis
     command: >
       redis-server --port 6379 --appendonly yes
     volumes:
       - evolution_redis:/data
+    networks:
+      - evolution-net
     ports:
       - 6379:6379
+    expose:
+      - 6379
 
   postgres:
     container_name: postgres
     image: postgres:15
-    networks:
-      - evolution-net
     command: ["postgres", "-c", "max_connections=1000"]
     restart: always
-    ports:
-      - 5432:5432
     environment:
-      - POSTGRES_PASSWORD=PASSWORD
+      POSTGRES_USER: evolution_user
+      POSTGRES_PASSWORD: evolution_password
+      POSTGRES_DB: evolution_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - evolution-net
+    ports:
+      - 5432:5432
     expose:
       - 5432
 
 volumes:
   evolution_instances:
+    driver: local
   evolution_redis:
+    driver: local
   postgres_data:
-
+    driver: local
 
 networks:
   evolution-net:
